k8s/namespace-dev-sprint7.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: dev-sprint7
spec: {}
status: {}
